--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,17 +1,3 @@
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-h3 {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
 
 .container__advantages {
   padding: 0 45px;
@@ -139,11 +125,13 @@ color: var(--brand-white);
 @media (min-width:769px){
   font-size: 48px;
 line-height: calc(59/48);
+margin-bottom: 12px;
 }
 
 @media (min-width:1200px){
   font-size: 58px;
 line-height: calc(71/58);
+margin-bottom: 12px;
 }
 }
 
