--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,7 +2,7 @@
 <section class="advantages">  
   <div class="container container__advantages">
     <h2 class="advantages__title">advantages</h2>
-    <ul class="advantages__list">
+    <ul class="advantages__list list">
       <li class="advantages__item cow">
         
         <h3 class="advantages__item__title">721</h3>
