--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -2,8 +2,10 @@
 .menu-toggle {
     margin-left: auto;
     // background-color: rgba(0,0,0,0);
-    background-color: aqua;
+    background-color: blue;
     border: none;
+    color: var(--brand-menu);
+    outline: none;
 
     @media screen and (min-width: 768px) {
         margin-right: 32;
@@ -13,8 +15,6 @@
         display: none;
     }
 }
-.menu__icon {
-    fill: var(--brand-menu);
-}
+
   
   
