--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -114,10 +114,20 @@
   <div class="btn">
     <ul class="btn__list list">
       <li class="btn__item">
-        <button class="btn__our-locations">Our Locations</button>
+        <button class="btn__our-locations">
+          <p class="btn__content">Our Locations</p>
+          <svg class="svg-icon" width="12" height="12">
+            <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
+          </svg>
+        </button>
       </li>
       <li class="btn__item">
-        <button class="btn__franchise">Franchise</button>
+        <button class="btn__franchise">
+          <p class="btn__content">Franchise</p>
+          <svg class="svg-icon" width="12" height="12">
+            <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
