--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -23,18 +23,14 @@
 
 .contacts {
   background-color: #84a178;
-
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 40 20 60;
 
   @media screen and (min-width: 768px) {
-    padding-left: 32px;
-    padding-right: 32px;
+    padding: 80 32 40;
   }
 
   @media screen and (min-width: 1200px) {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 100 16 120;
   }
 }
 
@@ -62,12 +58,18 @@
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
-  max-width: 280px;
-
   &:not(:last-child) {
     @media screen and (max-width: 767px) {
       margin-bottom: 16px;
     }
+  }
+
+  @media screen and (max-width: 479px) {
+    min-width: 100%;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    max-width: 423px;
   }
 
   @media screen and (min-width: 768px) {
@@ -114,6 +116,8 @@
   color: #131313;
 
   @media screen and (min-width: 768px) {
+    font-size: 16px;
+    line-height: calc(22 / 16);
     margin-bottom: 32px;
   }
 }
@@ -144,10 +148,19 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 12px;
   }
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: calc(30 / 16);
+  }
 }
 
 .adress__link {
-  display: flex;
   font-family: 'Montserrat';
   font-weight: 500;
   font-size: 12px;
@@ -155,6 +168,16 @@
   letter-spacing: 0.04em;
 
   color: #d6936d;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: calc(29 / 16);
+  }
 }
 
 .week__title {
@@ -164,6 +187,16 @@
   line-height: calc(22 / 12);
 
   color: #131313;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: calc(30 / 16);
+  }
 }
 
 .week__time {
@@ -176,7 +209,14 @@
 
   margin-bottom: 8px;
 
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+
   @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: calc(30 / 16);
     margin-bottom: 12px;
   }
 }
@@ -186,6 +226,16 @@
   font-weight: 500;
   font-size: 12px;
   line-height: calc(19 / 12);
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: calc(21 / 14);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: calc(24 / 16);
+  }
 }
 
 .category-contacts__link--phone {
@@ -202,13 +252,20 @@
 }
 
 .btn__list {
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
+  justify-content: center;
+  align-items: center;
 
-.btn__item {
-  margin: 0 auto;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .btn__our-locations {
