--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,11 +1,11 @@
-<!-- Contacts -->
+<!-- Contacts Liubomyr Vynnychuk -->
 
 <section class="contacts">
   <h2 class="contacts__title visually-hidden">Contacts</h2>
   <ul class="contacts__list list">
     <li class="contacts__item">
       <div class="category">
-        <p class="category__title" type="button">CAFE</p>
+        <p class="category__title">CAFE</p>
         <ul class="category__list list">
           <li class="category__item">
             <p class="adress__title">Chicago</p>
@@ -15,11 +15,11 @@
             <ul class="week__list list">
               <li class="week__item">
                 <p class="week__title">Monday - Friday</p>
-                <time class="week__time">06:00 AM - 10:00 PM</time>
+                <p class="week__time">06:00 AM - 10:00 PM</p>
               </li>
               <li class="week__item">
                 <p class="week__title">Saturday - Sunday</p>
-                <time class="week__time">08:00 AM - 16:00 PM</time>
+                <p class="week__time">08:00 AM - 16:00 PM</p>
               </li>
             </ul>
           </li>
@@ -51,11 +51,11 @@
             <ul class="week__list list">
               <li class="week__item">
                 <p class="week__title">Monday - Friday</p>
-                <time class="week__time">06:00 AM - 10:00 PM</time>
+                <p class="week__time">06:00 AM - 10:00 PM</p>
               </li>
               <li class="week__item">
                 <p class="week__title">Saturday - Sunday</p>
-                <time class="week__time">08:00 AM - 16:00 PM</time>
+                <p class="week__time">08:00 AM - 16:00 PM</p>
               </li>
             </ul>
           </li>
@@ -87,11 +87,11 @@
             <ul class="week__list list">
               <li class="week__item">
                 <p class="week__title">Monday - Friday</p>
-                <time class="week__time">06:00 AM - 10:00 PM</time>
+                <p class="week__time">06:00 AM - 10:00 PM</p>
               </li>
               <li class="week__item">
                 <p class="week__title">Saturday - Sunday</p>
-                <time class="week__time">08:00 AM - 16:00 PM</time>
+                <p class="week__time">08:00 AM - 16:00 PM</p>
               </li>
             </ul>
           </li>
@@ -115,7 +115,7 @@
     <ul class="btn__list list">
       <li class="btn__item">
         <button class="btn__our-locations">
-          <p class="btn__content">Our Locations</p>
+          Our Locations
           <svg class="svg-icon" width="12" height="12">
             <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
           </svg>
@@ -123,7 +123,7 @@
       </li>
       <li class="btn__item">
         <button class="btn__franchise">
-          <p class="btn__content">Franchise</p>
+          Franchise
           <svg class="svg-icon" width="12" height="12">
             <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
           </svg>
@@ -131,6 +131,4 @@
       </li>
     </ul>
   </div>
-
-
 </section>
