--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -88,11 +88,6 @@
   color: #fff;
   outline: transparent;
 }
-@media screen and (min-width: 768px) {
-  .btn__read-more {
-    margin-left: 0;
-  }
-}
 
 .btn__our-locations {
   display: inline-flex;
@@ -257,13 +252,9 @@
   flex-wrap: wrap;
   gap: 40px;
 }
-@media screen and (min-width: 480px) {
-  .about__desc {
-    flex-wrap: nowrap;
-  }
-}
 @media screen and (min-width: 768px) {
   .about__desc {
+    flex-wrap: nowrap;
     gap: 41px;
   }
 }
@@ -274,7 +265,9 @@
 }
 
 .about__position {
+  display: block;
   position: relative;
+  margin: auto;
   width: 280px;
   height: 300px;
 }
@@ -300,7 +293,7 @@
 .about__circle {
   width: 279px;
   height: 278px;
-  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
   box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
   border-radius: 140px;
 }
@@ -324,6 +317,8 @@
   top: 22px;
   left: 0;
   border-radius: 140px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 @media screen and (min-width: 768px) {
   .about__img {
@@ -430,11 +425,29 @@
 
 .about__icon-btn {
   margin-left: 4px;
-  fill: black;
-  transition: color 250ms var(--transition-timing-function);
+  fill: currentColor;
+  transition: fill 250ms var(--transition-timing-function);
 }
 .about__icon-btn:hover {
+  fill: black;
+}
+.about__icon-btn:focus {
   fill: var(--brand-white);
+}
+
+.btn__read-more--about {
+  display: block;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+  margin: auto;
+  cursor: pointer;
+  transition: background-color 250ms var(--transition-timing-function), outline 250ms var(--transition-timing-function), color 250ms var(--transition-timing-function);
+}
+@media screen and (min-width: 768px) {
+  .btn__read-more--about {
+    margin-left: 0;
+  }
 }
 
 .list {
@@ -479,6 +492,7 @@ body {
     max-width: 1600px;
     background-repeat: no-repeat;
     background-position: fixed;
+    background-attachment: fixed;
     background-size: cover;
     z-index: -1;
     background-image: url(../images/body_bg/mobile1x.png);
@@ -923,11 +937,6 @@ body {
   color: #fff;
   outline: transparent;
 }
-@media screen and (min-width: 768px) {
-  .btn__read-more {
-    margin-left: 0;
-  }
-}
 
 .btn__our-locations {
   display: inline-flex;
@@ -986,4 +995,175 @@ body {
   background: #0a8817;
   color: #fff;
   outline: transparent;
+}
+
+.container__advantages {
+  padding: 0 45px;
+}
+@media (min-width: 769px) {
+  .container__advantages {
+    padding: 0 76px;
+  }
+}
+@media (min-width: 1200px) {
+  .container__advantages {
+    padding: 0 15px;
+  }
+}
+
+.advantages {
+  padding-bottom: 64px;
+  background-color: var(--brand-green);
+}
+@media (min-width: 769px) {
+  .advantages {
+    padding-bottom: 204px;
+  }
+}
+@media (min-width: 769px) {
+  .advantages {
+    padding-bottom: 178px;
+  }
+}
+
+.advantages__title {
+  position: absolute;
+  opacity: 0;
+}
+
+.advantages__list {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  align-items: center;
+}
+@media screen and (min-width: 769px) {
+  .advantages__list {
+    flex-direction: row;
+    align-items: center;
+    gap: 80px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages__list {
+    flex-direction: row;
+    align-items: center;
+    gap: 32px;
+  }
+}
+
+.advantages__item {
+  position: relative;
+  padding-top: 60px;
+  max-width: 230px;
+}
+@media (min-width: 769px) {
+  .advantages__item {
+    max-width: 152px;
+    padding-top: 82px;
+    flex-basis: calc((100% - 160px) / 3);
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__item {
+    max-width: 368px;
+    padding-top: 90px;
+    flex-basis: calc((100% - 64px) / 3);
+  }
+}
+
+.advantages__item::before {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 50px;
+  height: 50px;
+  top: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.advantages__item.cow::before {
+  background-image: url(../images/advantages/cow1x.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages__item.cow::before {
+    background-image: url(../images/advantages/cow2x.png);
+    background-size: contain;
+  }
+}
+
+.advantages__item.weight::before {
+  background-image: url(../images/advantages/weight1x.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages__item.weight::before {
+    background-image: url(../images/advantages/weight2x.png);
+    background-size: contain;
+  }
+}
+
+.advantages__item.icecrema::before {
+  background-image: url(../images/advantages/icecrema1x.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .advantages__item.icecrema::before {
+    background-image: url(../images/advantages/icecrema2x.png);
+    background-size: contain;
+  }
+}
+
+.advantages__item__title {
+  position: relative;
+  margin-bottom: 16px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(44/36);
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--brand-white);
+}
+@media (min-width: 769px) {
+  .advantages__item__title {
+    font-size: 48px;
+    line-height: calc(59/48);
+    margin-bottom: 12px;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__item__title {
+    font-size: 58px;
+    line-height: calc(71/58);
+    margin-bottom: 12px;
+  }
+}
+
+.advantages__item__text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: calc(20/12);
+  /* or 20px */
+  text-align: center;
+  color: var(--brand-white);
+}
+@media (min-width: 769px) {
+  .advantages__item__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 174%;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__item__text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 176%;
+    letter-spacing: 0.02em;
+  }
 }/*# sourceMappingURL=index.css.map */
