--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,5 +1,6 @@
 .customer-reviews {
-    margin: 80px 0;
+    margin-top: 80px;
+    padding-bottom: 40px;
 }
 
 :root {
@@ -14,7 +15,8 @@
   }
 }
 .swiper {
-  text-align: center; 
+  text-align: center;
+  max-width: 968px;
 
     &__image {
       width: 85px;
@@ -117,4 +119,7 @@
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
   color: var(--brand-yellow);
+}
+.swiper-pagination {
+  position: relative;
 }
