--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,6 +44,11 @@
             <use href="./images/svg/symbol-defs.svg#header-menu"></use>
           </svg>
         </button>
-        <button class="btn__buy-now header__btn" type="button" data-modal-open>Buy now</button>
+        <button class="btn__buy-now header__btn">
+            <p class="btn__content">Buy now</p>
+            <svg class="svg-icon" width="12" height="12">
+              <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
+            </svg>
+          </button>
     </div>
 </header>
