--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -121,7 +121,7 @@
 }
 
 .btn__buy-now {
-  display: inline-flex;
+  // display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 152px;
