--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,8 +1,3 @@
-.link {
-    text-decoration: none;
-    color: currentColor;
-  }
-
 .header {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -51,10 +46,10 @@
     display: flex;
     margin-bottom: 13px;
     margin-right: 204px;
+    letter-spacing: normal;
 }
   
   .nav__list {
-      
       display: none;
       gap: 28px;
       align-items: center;
@@ -68,23 +63,30 @@
     }
   }
 
-  
-  .link {
+
+  .nav__link {
+    padding-top: 32px;
+    padding-bottom: 13px;
+    color: currentColor;
     transition: color var(--transition-timing-function);
   
     &:hover,
-    &:focus
-     {
+    &:focus {
       color: var(--brand-yellow);
+
+      @media screen and (min-width: 1200px){
+        cursor: url(../images/l1x_cursor.png), pointer;
+
+            @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx){
+                cursor: url(../images/l2x_cursor.png), pointer;
+            }
+        }
     }
 }
-  
-    
+
 
 .header__btn {
     display: none;
-    justify-content: center;
-    align-items: center;
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
