--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -1,10 +1,9 @@
 
 .menu-toggle {
     margin-left: auto;
-    // background-color: rgba(0,0,0,0);
-    background-color: blue;
+    background-color: rgba(0,0,0,0);
     border: none;
-    color: var(--brand-menu);
+    fill: var(--brand-menu);
     outline: none;
 
     @media screen and (min-width: 768px) {
