Add buy-now modal

--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -2,4 +2,4 @@
 <button class="btn__read-more">Read more</button>
 <button class="btn__our-locations">Our Locations</button>
 <button class="btn__franchise">Franchise</button>
-<button class="btn__buy-now">Buy now</button>
+<button class="btn__buy-now js-open-modal" data-modal="1">Buy now</button>
