--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,21 @@
  <!-- Mobile menu Виниченко Елена -->
- <div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="menu-toggle js-close-menu">
+ <div class="menu-container js-menu-container is-open" id="mobile-menu">
+    <a class="header__logo" href arial label>
+        <img 
+        class="logo__img"
+        srcset="
+        ./images/logo/s1x_logo.png 279w,
+        ./images/logo/m1x_logo.png 330w,
+        ./images/logo/s2x_logo.png 558w,
+        ./images/logo/m2x_logo.png 660w
+        " 
+        sizes="(min-width: 1200px) 490px,
+                (min-width: 768px) 330px"
+        alt="logo"
+        src="./images/logo/s1x_logo.png"
+        loading="lazy"/>
+    </a>
+    <button class="menu__toggle js-close-menu">
       <svg class="menu-close-icon" width="32" height="32">
         <use href="./images/svg/symbol-defs.svg#close-menu"></use>
       </svg>
@@ -12,7 +27,8 @@
         >
       </li>
       <li class="mobile-menu-item">
-        <a href="" class="mobile-menu-link link">How it’s made?</a>
+        <a href="" class="mobile-menu-link link
+        ">How it’s made?</a>
       </li>
       <li class="mobile-menu-item">
         <a href="" class="mobile-menu-link link">Our products</a>
@@ -21,6 +37,12 @@
         <a href="" class="mobile-menu-link link">Contact</a>
       </li>
     </ul>
+    <button class="btn__buy-now menu-btn">
+        <p class="btn__content">Buy now</p>
+        <svg class="svg-icon" width="12" height="12">
+          <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
+        </svg>
+    </button>
 </div>
 
     
