--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -1,19 +1,110 @@
-
-.menu-toggle {
+ .menu__toggle {
+    min-height: 32px;
+    min-width: 32px;
+    display: flex;
     margin-left: auto;
     background-color: rgba(0,0,0,0);
     border: none;
     fill: var(--brand-menu);
     outline: none;
+    
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: var(--brand-white);
 
-    @media screen and (min-width: 768px) {
-        margin-right: 32;
-    }
+        @media screen and (min-width: 768px) {
+            margin-right: 32px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: none;
+        }
+    
+        &:hover,
+        &:focus {
+            fill: var(--brand-yellow);
+        }
+    
+      }
+   
 
-    @media screen and (min-width: 1200px) {
-        display: none;
-    }
-}
-
+    
   
+//   .menu-toggle {
+//     
+//     align-items: center;
+//     justify-content: center;
+  
+//     margin: 0;
+//     padding: 0;
+//     background-color: transparent;
+//     cursor: pointer;
+//     border: none;
+//     border-radius: 50%;
+//     outline: none;
+//   }
+  
+//   @media (min-width: 768px) {
+//     .menu-toggle {
+//       display: none;
+//     }
+//   }
+  
+  
+  
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 12px 20px 12px 32px;
+    background-color: var(--brand-green);
+    z-index: 999;
+  
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
+  
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
+  
+  .menu-container .menu__toggle {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: var(--brand-white);
+  }
+
+  .mobile-menu {
+    padding: 0;
+    padding-top: 51px;
+    margin: 0;
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .mobile-menu .link {
+    color: var(--brand-white);
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.22;
+
+    &:hover,
+    &:focus {
+        color: var(--brand-black);
+    }
+
+  }
+
+.menu-btn {
+    display: inline-flex;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+}
   
