Add about-product modal

--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -1,4 +1,4 @@
-<button class="btn__products">
+<button class="btn__products js-open-modal" data-modal="2">
   <p class="btn__content">Products</p>
 </button>
 
