fix mistake with margin

--- a/src/sass/_about-product.scss
+++ b/src/sass/_about-product.scss
@@ -182,6 +182,7 @@ height: 53px;
         @media screen and (min-width:768px) {
     font-size: 12px;     
     line-height: 15/12;
+    margin-bottom: 14px;
 }
 }
 .about-product__text--mb{
