fix problem with h2

--- a/src/partials/about-product.html
+++ b/src/partials/about-product.html
@@ -9,7 +9,7 @@
         <use href="./images/svg/symbol-defs.svg#close"></use>
         </svg>
         </button> -->
-        <h2 class="about-product__title">Buy now</h2>
+        <h2 class="about-product__title">Chololate icecream</h2>
             <div class="about-product__wrapper">
                 <img
                     class="about-product__img img"
