add read-more modal

--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -2,7 +2,7 @@
   <p class="btn__content">Products</p>
 </button>
 
-<button class="btn__read-more">
+<button class="btn__read-more js-open-modal" data-modal="3">
   <p class="btn__content">Read more</p>
   <svg class="svg-icon" width="12" height="12">
     <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
