--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,20 +6,16 @@
     <div class="about__desc">
       <div class="about__position">
         <div class="about__circle"></div>
-        <img class="about__img"
-        srcset="
+        <img class="about__img" srcset="
                 .\images\about\cow_sm@1x.jpg 279w,
                 .\images\about\cow_md@1x.jpg 330w,
                 .\images\about\cow_lg@1x.jpg 490w,
                 .\images\about\cow_sm@2x.jpg 558w,
                 .\images\about\cow_md@2x.jpg 660w,
                 .\images\about\cow_lg@2x.jpg 980w
-                " 
-                sizes="(min-width: 1200px) 490px,
+                " sizes="(min-width: 1200px) 490px,
                         (min-width: 768px) 330px,
-                        (min-width: 480px) 279px, 100vw" 
-                alt="cow" src=".\images\about\cow_sm@1x.jpg" 
-                loading="lazy"/>
+                        (min-width: 480px) 279px, 100vw" alt="cow" src=".\images\about\cow_sm@1x.jpg" loading="lazy" />
       </div>
       <div class="about__text-right">
         <p class="about__descriptions">
@@ -42,8 +38,8 @@
             <use href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
           </svg>
         </button>
-
       </div>
     </div>
   </div>
 </section>
+
