--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -85,17 +85,13 @@
   width: 280px;
   height: 300px;
 
-  @media screen and (min-width: 480px) {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
   @media screen and (min-width: 768px) {
     width: 330px;
     height: 356px;
   }
 
   @media screen and (min-width: 1200px) {
+    margin: 0;
     width: 491px;
     height: 529px;
   }
@@ -104,7 +100,6 @@
 .about__circle {
   width: 279px;
   height: 278px;
-
   background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
   box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
   border-radius: 140px;
@@ -129,7 +124,6 @@
   border-radius: 140px;
   margin-top: auto;
   margin-bottom: auto;
-
 
   @media screen and (min-width: 768px) {
     top: 26px;
@@ -190,25 +184,12 @@
     font-size: 14px;
     line-height: 1.93;
   }
-
-  @media screen and (min-width: 768px) {
-    width: 336px;
-    font-size: 16px;
-    line-height: 1.75;
-    text-align: left;
-    margin-bottom: 8px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 463px;
-    font-size: 14px;
-    line-height: 1.93;
-  }
 }
 
-.about__icon-btn {
-  margin-left: 4px;
-  fill: currentColor;
+.about__choice {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
   @media screen and (min-width: 768px) {
     width: 336px;
@@ -247,16 +228,15 @@
   font-weight: 600;
   font-size: 14px;
   line-height: calc(18 / 14);
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
 
-  transition: background-color 250ms var(--transition-timing-function), 
-  outline 250ms var(--transition-timing-function), 
-  color 250ms var(--transition-timing-function);
+  transition: background-color 250ms var(--transition-timing-function),
+    outline 250ms var(--transition-timing-function),
+    color 250ms var(--transition-timing-function);
 
   @media screen and (min-width: 768px) {
-    margin-left: 0;
+    margin: 0;
   }
 }
-
-
