--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,25 @@
 <footer class="footer">
-    <div class="container">
         <div class="footer__border">
             <p class="footer__title"> homemade ice cream <span class="made">made</span> <span class="footer__title-passion"> with <br
                         class="title_br"> passion</span></p>
             <div class="footer__links">
                 <ul class="footer__social">
                     <li class="social-link">
-                        <a href="">
+                        <a target="_blank" href="https://github.com/">
                             <svg  width="20px" height="20px" class="git">
                                 <use href="./images/svg/symbol-defs.svg#icon-git"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="">
+                        <a target="_blank" href="https://telegram.org">
                             <svg width="20.4px" height="15.87px" class="telegram">
                                 <use href="./images/svg/symbol-defs.svg#icon-telegram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="">
+                        <a target="_blank" href="https://www.facebook.com/">
                             <svg width="9.35px" height="20.4px" class="facebook">
                                 <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
                             </svg>
@@ -35,6 +34,5 @@
                         </div>
                         <div class="company">
                             <p class="footer__company">© 2022 - IceCream. <br class="br"> All Rights Reserved.</p>
-                        </div>
                         </div>
                         </footer>
