--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -140,13 +140,12 @@
             padding-bottom: 12px;
         }
     }
-
     &__border {
-        border-bottom: 1px solid #E1E1E1;
-
+border-bottom: 1px solid #E1E1E1;
         @media (min-width: 768px) and (max-width: 1199px) {
             display: flex;
             padding-bottom: 32px;
+            padding-top: 20px;
         }
 
         @media (min-width: 320px) and (max-width: 768px) {
@@ -157,6 +156,7 @@
             display: flex;
             margin-left: 16px;
             margin-right: 16px;
+            padding-top: 60px;
         }
     }
 
@@ -200,6 +200,7 @@
     }
 }
 .footer__link-position {
+    text-align: right;
     @media (min-width: 320px) and (max-width: 768px) {
         text-align: right;
         margin-right: 20px;
