--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -1,4 +1,5 @@
 body {
+  cursor: url(../images/cursor.png), default;
   margin: 0 auto;
   font-family: Montserrat, sans-serif;
   font-size: 12px;
