--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -19,7 +19,7 @@
   border: 2px solid #f8d24e;
   border-radius: 8px;
 
-  cursor: pointer;
+  cursor: url(../images/cursor.png), pointer;
 
   &:hover,
   &:focus {
@@ -59,6 +59,7 @@
   margin-left: auto;
   margin-right: auto;
 
+  cursor: url(../images/cursor.png), pointer;
 
   transition: background-color 250ms var(--transition-timing-function), 
   outline 250 ms var(--transition-timing-function);
@@ -85,6 +86,8 @@
   border-radius: 10px;
   border: none;
   color: black;
+
+  cursor: url(../images/cursor.png), pointer;
   &:hover {
     background: #0a8817;
   }
@@ -105,7 +108,7 @@
   border: 2px solid #f8d24e;
   border-radius: 8px;
 
-  cursor: pointer;
+  cursor: url(../images/cursor.png), pointer;
 
   &:hover {
     border: 2px solid #0a8817;
@@ -127,6 +130,8 @@
   border-radius: 10px;
   border: none;
   color: black;
+
+  cursor: url(../images/cursor.png), pointer;
   &:hover {
     background: #0a8817;
   }
