--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,15 +1,41 @@
 @charset "UTF-8";
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .gallery {
-  padding-top: 30px;
   padding-bottom: 12px;
+  background-image: linear-gradient(to bottom, var(--brand-green) 25%, #ffffff00 25%, #ff000000 35%, #ff313100 35%);
+}
+
+.gallery__container {
+  position: relative;
+  height: 130px;
+}
+@media screen and (min-width: 768px) {
+  .gallery__container {
+    height: 327px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__container {
+    height: 422px;
+  }
 }
 
 .gallery__img {
+  position: absolute;
   display: block;
   max-width: 100%;
-  height: auto;
-  margin: 0 auto;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 100%;
+  -webkit-animation-name: changeGallery;
+          animation-name: changeGallery;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-duration: 15s;
+          animation-duration: 15s;
 }
 @media screen and (min-width: 768px) {
   .gallery__img {
@@ -22,6 +48,51 @@
   }
 }
 
+.gallery__img--second {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.gallery__img--third {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+
+@-webkit-keyframes changeGallery {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 0;
+  }
+  87% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes changeGallery {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 0;
+  }
+  87% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /*СТИЛИ ДЛЯ СТРЕЛОК НА КНОПКАХ*/
 .btn__content {
   display: inline;
@@ -129,7 +200,6 @@
 }
 
 .btn__buy-now {
-  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 152px;
@@ -156,8 +226,8 @@
 }
 @media screen and (max-width: 479px) {
   .container {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 @media screen and (min-width: 480px) {
@@ -477,6 +547,8 @@ p {
   --brand-yellow: #F8D24E;
   --brand-black: #131313;
   --brand-white: #FCFCFC;
+  --brand-header: #84A278;
+  --brand-menu: #FFFFFF;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -550,16 +622,16 @@ body {
 
 .contacts {
   background-color: #84a178;
-  padding: 0 20px 60px;
+  padding: 40px 20px 60px;
 }
 @media screen and (min-width: 768px) {
   .contacts {
-    padding: 0 32px 60px;
+    padding: 80px 32px 40px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .contacts {
-    padding: 0 16px 60px;
+    padding: 100px 16px 120px;
   }
 }
 
@@ -574,11 +646,13 @@ body {
   .contacts__list {
     flex-direction: row;
     gap: 16px;
+    margin-bottom: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts__list {
     gap: 32px;
+    margin-bottom: 60px;
   }
 }
 
@@ -588,23 +662,28 @@ body {
   border-radius: 24px;
 }
 @media screen and (max-width: 767px) {
-  .contacts__item {
-    max-width: 280px;
-  }
   .contacts__item:not(:last-child) {
     margin-bottom: 16px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .contacts__item {
+    min-width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .contacts__item {
+    width: 439px;
   }
 }
 @media screen and (min-width: 768px) {
   .contacts__item {
     max-width: 224px;
-    height: 537px;
   }
 }
 @media screen and (min-width: 1200px) {
   .contacts__item {
     max-width: 368px;
-    height: 542px;
   }
 }
 
@@ -613,7 +692,12 @@ body {
 }
 @media screen and (min-width: 768px) {
   .category {
-    padding: 40px 41px 24px;
+    padding: 40px 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .category {
+    padding: 40px;
   }
 }
 
@@ -636,6 +720,8 @@ body {
 }
 @media screen and (min-width: 768px) {
   .category__title {
+    font-size: 16px;
+    line-height: calc(22 / 16);
     margin-bottom: 32px;
   }
 }
@@ -648,6 +734,7 @@ body {
 @media screen and (min-width: 768px) {
   .category__item:not(:last-child) {
     margin-bottom: 32px;
+    padding-bottom: 32px;
   }
 }
 
@@ -660,9 +747,21 @@ body {
   color: #131313;
   margin-bottom: 8px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .adress__title {
     margin-bottom: 12px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .adress__title {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adress__title {
+    font-size: 16px;
+    line-height: calc(30 / 16);
   }
 }
 
@@ -674,14 +773,17 @@ body {
   letter-spacing: 0.04em;
   color: #d6936d;
 }
-
-.week__time {
-  font-family: "Montserrat";
-  font-weight: 500;
-  font-size: 12px;
-  line-height: calc(22 / 12);
-  color: #ababab;
-  margin-bottom: 8px;
+@media screen and (min-width: 768px) {
+  .adress__link {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adress__link {
+    font-size: 16px;
+    line-height: calc(29 / 16);
+  }
 }
 
 .week__title {
@@ -691,6 +793,40 @@ body {
   line-height: calc(22 / 12);
   color: #131313;
 }
+@media screen and (min-width: 768px) {
+  .week__title {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .week__title {
+    font-size: 16px;
+    line-height: calc(30 / 16);
+  }
+}
+
+.week__time {
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  color: #ababab;
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 768px) {
+  .week__time {
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .week__time {
+    font-size: 16px;
+    line-height: calc(30 / 16);
+    margin-bottom: 12px;
+  }
+}
 
 .category-contacts__item {
   font-family: "Montserrat";
@@ -698,10 +834,27 @@ body {
   font-size: 12px;
   line-height: calc(19 / 12);
 }
+@media screen and (min-width: 768px) {
+  .category-contacts__item {
+    font-size: 14px;
+    line-height: calc(21 / 14);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .category-contacts__item {
+    font-size: 16px;
+    line-height: calc(24 / 16);
+  }
+}
 
 .category-contacts__link--phone {
   color: #131313;
   margin-bottom: 6px;
+}
+@media screen and (min-width: 1200px) {
+  .category-contacts__link--phone {
+    margin-bottom: 4px;
+  }
 }
 
 .category-contacts__link--mail {
@@ -709,13 +862,20 @@ body {
 }
 
 .btn__list {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(18 / 14);
   display: flex;
   flex-direction: column;
   gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
-
-.btn__item {
-  margin: 0 auto;
+@media screen and (min-width: 768px) {
+  .btn__list {
+    flex-direction: row;
+  }
 }
 
 .btn__our-locations {
@@ -871,6 +1031,405 @@ body {
   color: var(--brand-yellow);
 }
 
+.header {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: var(--brand-header);
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 8px;
+    padding-bottom: 31px;
+  }
+}
+
+.header__container {
+  display: flex;
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    align-items: flex-end;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 308px;
+  }
+}
+
+.logo__img {
+  width: 40px;
+  height: 37px;
+}
+@media screen and (min-width: 768px) {
+  .logo__img {
+    width: 48px;
+    height: 44px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo__img {
+    width: 60px;
+    height: 65px;
+  }
+}
+
+.nav {
+  display: flex;
+  margin-bottom: 13px;
+  margin-right: 204px;
+  letter-spacing: normal;
+}
+
+.nav__list {
+  display: none;
+  gap: 28px;
+  align-items: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--brand-white);
+}
+@media screen and (min-width: 1200px) {
+  .nav__list {
+    display: flex;
+  }
+}
+
+.nav__link {
+  padding-top: 32px;
+  padding-bottom: 13px;
+  color: currentColor;
+  transition: color var(--transition-timing-function);
+}
+.nav__link:hover, .nav__link:focus {
+  color: var(--brand-yellow);
+}
+@media screen and (min-width: 1200px) {
+  .nav__link:hover, .nav__link:focus {
+    cursor: url(../images/cursor.png), pointer;
+  }
+}
+
+.header__btn {
+  display: none;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+}
+@media screen and (min-width: 768px) {
+  .header__btn {
+    display: flex;
+    padding: 3px;
+  }
+}
+
+.menu-toggle {
+  margin-left: auto;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  fill: var(--brand-menu);
+  outline: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    margin-right: 32;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+/* Стили для подложки */
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
+@media screen and (max-height: 991px) {
+  .overlay {
+    overflow: scroll;
+  }
+}
+
+/* Стили для модальных окон */
+.modal {
+  /* Скрываем окна  */
+  opacity: 0;
+  visibility: hidden;
+  /*  Установаем ширину окна  */
+  width: 100%;
+  max-width: 280px;
+  /*  Центрируем и задаем z-index */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  /* Должен быть выше чем у подложки*/
+  /*  Побочные стили   */
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 28px;
+  border-radius: 3px;
+  background-color: #FCFCFC;
+  transition: 0.3s all;
+  border: 2px solid #F8D24E;
+}
+@media screen and (max-height: 991px) {
+  .modal {
+    top: 10px;
+    transform: translate(-50%, 0);
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    max-width: 568px;
+    padding: 32px 54px;
+  }
+}
+
+/* Стили для активных классов подложки и окна */
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Стили для кнопки закрытия */
+.modal__close {
+  width: 13px;
+  height: 13px;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
+  position: absolute;
+}
+
+.modal-close {
+  fill: #000;
+}
+
+/* Стили для кнопок. Мы ведь порядочные разработчики, негоже простые ссылки оставлять */
+.buy-now {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.buy-now__title {
+  display: block;
+  font-family: "Seymour One";
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 83px;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__title {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 103px;
+  }
+}
+
+.buy-now-products {
+  margin-bottom: 31px;
+}
+@media screen and (min-width: 768px) {
+  .buy-now-products {
+    display: flex;
+    gap: 32px;
+    margin-bottom: 40px;
+  }
+}
+
+.buy-now__wrapper {
+  width: 132px;
+  height: 132px;
+  border-radius: 98px;
+  position: absolute;
+  top: -56;
+  left: -2;
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+  margin-bottom: 20px;
+}
+
+.buy-now__wrapper--yellow {
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+}
+
+.buy-now__wrapper--orange {
+  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+}
+
+.buy-now__img {
+  position: absolute;
+  top: -7;
+  left: 0;
+}
+
+.buy-now__item {
+  border: 2px solid #96AF8C;
+  border-radius: 15px;
+  width: 132px;
+  position: relative;
+  padding: 96px 16px 20px 16px;
+  transition: border 250ms var(--transition-timing-function);
+}
+.buy-now__item:not(:last-child) {
+  margin-bottom: 82px;
+}
+.buy-now__item:hover {
+  background-color: #96AF8C;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+.buy-now__item--yellow {
+  border: 2px solid #F8D24E;
+}
+.buy-now__item--yellow:hover {
+  background-color: #F8D24E;
+}
+
+.buy-now__item--orange {
+  border: 2px solid #D6936D;
+}
+.buy-now__item--orange:hover {
+  background-color: #D6936D;
+}
+
+.buy-now__text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(20/16);
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+
+.buy-now__group {
+  position: relative;
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__group {
+    width: 368px;
+    margin-bottom: 16px;
+  }
+}
+
+.buy-now__name {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.buy-now__field {
+  width: 100%;
+  height: 32px;
+  padding: 0 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: none;
+  border: 1px solid #84A178;
+  border-radius: 10px;
+  outline: unset;
+  font-size: 12px;
+  line-height: 1.4;
+}
+.buy-now__field:focus-within {
+  border: 2px solid #84A178;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__field {
+    padding: 0 16px;
+    height: 42px;
+    font-size: 14px;
+    line-height: 1.4;
+  }
+}
+
+.buy-now__placeholder {
+  position: absolute;
+  left: 12px;
+  top: 11px;
+}
+
+.buy-now__message {
+  width: 100%;
+  height: 65px;
+  resize: none;
+  padding: 8 12px;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84A178;
+  border-radius: 10px;
+  outline: unset;
+}
+.buy-now__message:focus-within {
+  border: 2px solid #84A178;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__message {
+    padding: 11 16px;
+    height: 84px;
+  }
+}
+
+.buy-now__field:not(:-moz-placeholder-shown) + .buy-now__name, .buy-now__message:not(:-moz-placeholder-shown) + .buy-now__placeholder {
+  opacity: 0;
+}
+
+.buy-now__field:not(:-ms-input-placeholder) + .buy-now__name, .buy-now__message:not(:-ms-input-placeholder) + .buy-now__placeholder {
+  opacity: 0;
+}
+
+.buy-now__label:focus-within .buy-now__name,
+.buy-now__field:not(:placeholder-shown) + .buy-now__name,
+.buy-now__label:focus-within .buy-now__placeholder,
+.buy-now__message:not(:placeholder-shown) + .buy-now__placeholder {
+  opacity: 0;
+}
+
+.buy-now__submit {
+  background: #F8D24E;
+  padding: 12px 34px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15/12);
+  color: #131313;
+  border: none;
+  border-radius: 10px;
+}
+@media screen and (min-width: 768px) {
+  .buy-now__submit {
+    margin-top: 16px;
+  }
+}
+
 /*СТИЛИ ДЛЯ СТРЕЛОК НА КНОПКАХ*/
 .btn__content {
   display: inline;
@@ -978,7 +1537,6 @@ body {
 }
 
 .btn__buy-now {
-  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 152px;
