--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -52,7 +52,7 @@
           </div>
           <h2 class="swiper__title">Diana, Chicago</h2>
         </li>
-        <li class="swiper-slide">
+        <!-- <li class="swiper-slide">
           <img
             class="swiper__image"
             src="./images/customer-reviews/review3@1x.jpg"
@@ -64,11 +64,11 @@
             quickly!
           </div>
           <h2 class="swiper__title">Diana, Chicago</h2>
-        </li>
+        </li> -->
       </ul>
       <div class="bullets-container"><div class="swiper-pagination"></div></div>
 
-      <div class="swiper-button-next"></div>
+      <!-- <div class="swiper-button-next"></div> -->
       <!-- <div class="swiper__nav">
         <div class="swiper__bullet"></div>
         <div class="swiper__bullet"></div>
