--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -3,6 +3,15 @@
 	--brand-yellow: #F8D24E;
 	--brand-black: #131313;
 	--brand-white: #FCFCFC;
-	--brand-brown: #D6936D;
+	
 	--transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	  //products//
+	--brand-products-1: #AEC6A5;
+	--brand-products-2: #EFD478;
+	--brand-products-3: #D6936D;
+	
+	--bg-shadow-1: rgba(10, 136, 23, 0.25);
+	--bg-shadow-2: rgba(153, 114, 23, 0.25);
+	--bg-shadow-3: rgba(0, 0, 0, 0.25);
 }
