--- a/src/partials/about-product.html
+++ b/src/partials/about-product.html
@@ -1,5 +1,5 @@
 <!-- Несколько модальных окон -->
-<div class="overlay js-overlay-modal">
+<!-- <div class="overlay js-overlay-modal" data-modal="2"></div> -->
     <div class="modal about-product" data-modal="2">
     <!--   Svg иконка для закрытия окна  -->
 
@@ -106,6 +106,7 @@
         </div>
     <!-- Подложка под модальным окном -->
 </div>
+<!-- <div class="overlay js-overlay-modal"></div> -->
 
 
 
