--- a/src/partials/read-more.html
+++ b/src/partials/read-more.html
@@ -1,5 +1,4 @@
 <!-- Несколько модальных окон -->
-<div class="overlay js-overlay-modal">
     <div class="modal read-more" data-modal="3">
     <!--   Svg иконка для закрытия окна  -->
 
@@ -25,4 +24,4 @@
 
         </div>
     <!-- Подложка под модальным окном -->
-</div>
+<!-- <div class="overlay js-overlay-modal"></div> -->
