--- a/src/sass/_read-more.scss
+++ b/src/sass/_read-more.scss
@@ -21,12 +21,11 @@
 
 
 /* Стили для модальных окон */
-
-.modal {
-   
-   /* Скрываем окна  */
+.modal{
    opacity: 0;
    visibility: hidden;
+}
+.read-more{
    
    
    /*  Установаем ширину окна  */
@@ -49,7 +48,11 @@
    transition: 0.3s all;
    border: 2px solid #F8D24E;
    
-   @media screen and (max-height:991px) {
+       @media screen and (max-height:459px) and (max-width:767px){
+      top: 10px;
+      transform: translate(-50%, 0);
+   }
+   @media screen and (max-height:449px) and (min-width:768px) {
       top: 10px;
       transform: translate(-50%, 0);
    }
