--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -1,5 +1,4 @@
 <!-- Несколько модальных окон -->
-<div class="overlay js-overlay-modal">
     <div class="modal buy-now" data-modal="1">
     <!--   Svg иконка для закрытия окна  -->
 
@@ -83,7 +82,8 @@
         </form>
         </div>
     <!-- Подложка под модальным окном -->
-</div>
+<div class="overlay js-overlay-modal"></div>
+
 
 
 
