--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -21,12 +21,12 @@
 
 
 /* Стили для модальных окон */
-
 .modal {
-   
-   /* Скрываем окна  */
    opacity: 0;
    visibility: hidden;
+   
+}
+.buy-now{
    
    
    /*  Установаем ширину окна  */
@@ -38,7 +38,7 @@
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   z-index: 30; /* Должен быть выше чем у подложки*/
+   z-index: 999; /* Должен быть выше чем у подложки*/
    
    /*  Побочные стили   */
    box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
@@ -49,7 +49,11 @@
    transition: 0.3s all;
    border: 2px solid #F8D24E;
    
-   @media screen and (max-height:991px) {
+       @media screen and (max-height:991px) and (max-width:767px){
+      top: 10px;
+      transform: translate(-50%, 0);
+   }
+   @media screen and (max-height:675px) and (min-width:768px) {
       top: 10px;
       transform: translate(-50%, 0);
    }
